--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             ></textarea>
             <input
               type="button"
-              value="Enviar"
+              value="Enquire"
               class="contact__button button"
             />
           </form>
@@ -218,13 +218,13 @@
 
     <!--===== FOOTER =====-->
     <footer class="footer">
-      <p class="footer__title">Marlon</p>
+      <p class="footer__title">SURAJ</p>
       <div class="footer__social">
         <a href="#" class="footer__icon"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="footer__icon"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="footer__icon"><i class="bx bxl-twitter"></i></a>
       </div>
-      <p>&#169; 2020 copyright all right reserved</p>
+      <p>&#169; 2021 copyright all right reserved</p>
     </footer>
 
     <!--===== SCROLL REVEAL =====-->
