--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
               <a href="#home" class="nav__link active">Home</a>
             </li>
             <li class="nav__item">
-              <a href="/about" class="nav__link">About</a>
+              <a href="#about" class="nav__link">About</a>
             </li>
             <li class="nav__item">
               <a href="#skills" class="nav__link">Skills</a>
