--- a/games/flappy-bird/index.html
+++ b/games/flappy-bird/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Flappy Bird</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -16,7 +16,9 @@
             <div class="current-score">Score: <span id="current-score">0</span></div>
             <div class="high-score">High Score: <span id="high-score">0</span></div>
         </div>
+        <a href="../../main.html" class="home-button">◄ Back to Menu</a>
     </div>
     <script src="game.js"></script>
+<script src="../../assets/js/mobile-support.js"></script>
 </body>
 </html> 
