Update references from main.html to index.html across multiple files for consistency and improved navigation.

--- a/games/memory/memory.html
+++ b/games/memory/memory.html
@@ -28,7 +28,7 @@
             Click Start New Game to begin
         </div>
         
-        <a href="../../main.html" class="home-button">◄ Back to Menu</a>
+        <a href="../../index.html" class="home-button">◄ Back to Menu</a>
     </div>
     <script src="memory.js"></script>
 <script src="../../assets/js/mobile-support.js"></script>
