--- a/games/pong/pong.html
+++ b/games/pong/pong.html
@@ -19,7 +19,7 @@
         <div class="controls-info">
             Use W/S or ↑/↓ keys to move
         </div>
-        <a href="../../main.html" class="home-button">◄ Back to Menu</a>
+        <a href="../../index.html" class="home-button">◄ Back to Menu</a>
     </div>
     <script src="pong.js"></script>
 <script src="../../assets/js/mobile-support.js"></script>
