--- a/games/snake/snake.html
+++ b/games/snake/snake.html
@@ -29,7 +29,7 @@
             <button id="down-btn" class="control-btn">▼</button>
         </div>
         
-        <a href="../../main.html" class="home-button">◄ Back to Menu</a>
+        <a href="../../index.html" class="home-button">◄ Back to Menu</a>
     </div>
     <script src="snake.js"></script>
 </body>
