--- a/games/tic-tac-toe/tic-tac-toe.html
+++ b/games/tic-tac-toe/tic-tac-toe.html
@@ -93,7 +93,7 @@
             </div>
         </div>
         
-        <a href="../../main.html" class="home-button">◄ Back to Menu</a>
+        <a href="../../index.html" class="home-button">◄ Back to Menu</a>
     </div>
     
     <!-- Schema.org structured data for rich results -->
