--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="JavaScript Game Collection - Classic Games Online">
     <meta property="og:description" content="Play classic games online for free including Flappy Bird, Snake, Pong, Memory Cards, Tic Tac Toe, and Coin Toss. No downloads required!">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.yourgamecollection.com/main.html">
+    <meta property="og:url" content="https://www.yourgamecollection.com/index.html">
     <meta property="og:image" content="https://www.yourgamecollection.com/assets/images/game-collection.jpg">
     
     <!-- Twitter Card Meta Tags -->
@@ -24,7 +24,7 @@
     <meta name="twitter:image" content="https://www.yourgamecollection.com/assets/images/game-collection.jpg">
 
     <!-- Canonical Link -->
-    <link rel="canonical" href="https://www.yourgamecollection.com/main.html">
+    <link rel="canonical" href="https://www.yourgamecollection.com/index.html">
     
     <!-- Stylesheets -->
     <link rel="stylesheet" href="assets/css/main.css">
