--- a/games/flappy-bird/index.html
+++ b/games/flappy-bird/index.html
@@ -16,7 +16,7 @@
             <div class="current-score">Score: <span id="current-score">0</span></div>
             <div class="high-score">High Score: <span id="high-score">0</span></div>
         </div>
-        <a href="../../main.html" class="home-button">◄ Back to Menu</a>
+        <a href="../../index.html" class="home-button">◄ Back to Menu</a>
     </div>
     <script src="game.js"></script>
 <script src="../../assets/js/mobile-support.js"></script>
